--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -1,5 +1,9 @@
 <section>
   <div class="container">
+    <nav class="my-5 text-center">
+      <button routerLink="./new" class="btn btn-primary rounded-3 p-2">Add New</button>
+    </nav>
+
     <ul class="note-list rounded">
       <li
         class="list-unstyled text-left rounded mb-4 p-4"
